Tested on user input

--- a/Beginner/Text_Summarization_App.ipynb
+++ b/Beginner/Text_Summarization_App.ipynb
@@ -33,8 +33,6 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "1b180b1c",
-        "outputId": "4547bb84-cf1b-4d4c-e14b-b2681b026a13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354,
@@ -106,7 +104,9 @@
             "eecb84eb257a45168331eb22547d55b1",
             "d48160138f8349fe905183298cd96f79"
           ]
-        }
+        },
+        "id": "1b180b1c",
+        "outputId": "4547bb84-cf1b-4d4c-e14b-b2681b026a13"
       },
       "outputs": [
         {
@@ -248,11 +248,11 @@
         "summary = summarizer(text, max_length = 50)"
       ],
       "metadata": {
-        "id": "sj3MS-Z9z1YL",
-        "outputId": "45f2f4d0-7e45-4d3d-b95d-ab77542f76b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sj3MS-Z9z1YL",
+        "outputId": "45f2f4d0-7e45-4d3d-b95d-ab77542f76b1"
       },
       "id": "sj3MS-Z9z1YL",
       "execution_count": 4,
@@ -274,11 +274,11 @@
         "print(summary)"
       ],
       "metadata": {
-        "id": "7u7irVvJz1Vl",
-        "outputId": "8607b0f8-6f29-4249-933d-765f39fc400b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7u7irVvJz1Vl",
+        "outputId": "8607b0f8-6f29-4249-933d-765f39fc400b"
       },
       "id": "7u7irVvJz1Vl",
       "execution_count": 5,
@@ -300,11 +300,11 @@
         "print(answer)"
       ],
       "metadata": {
-        "id": "SHAVZAxMz1TP",
-        "outputId": "74c90e51-53fd-4fce-9003-c348affd4966",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SHAVZAxMz1TP",
+        "outputId": "74c90e51-53fd-4fce-9003-c348affd4966"
       },
       "id": "SHAVZAxMz1TP",
       "execution_count": 6,
@@ -320,11 +320,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# check on user input\n",
+        "user_text = input(\"Enter text to summarize: \")\n",
+        "custom_max_length = int(input(\"Enter max length: \"))\n",
+        "custom_summary = summarizer(user_text, max_length = custom_max_length)"
+      ],
       "metadata": {
-        "id": "SK5un4TE0enF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SK5un4TE0enF",
+        "outputId": "8a717791-cacc-4885-e41a-c3ad4f8daea8"
       },
       "id": "SK5un4TE0enF",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter text to summarize: A forgotten melody drifts from an old gramophone. Dust motes dance in the single ray of sunlight. Time stands still in the quiet room.\n",
+            "Enter max length: 10\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Your min_length=56 must be inferior than your max_length=10.\n",
+            "/usr/local/lib/python3.11/dist-packages/transformers/generation/utils.py:1570: UserWarning: Unfeasible length constraints: `min_length` (56) is larger than the maximum possible length (10). Generation will stop at the defined maximum length. You should decrease the minimum length and/or increase the maximum length.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(custom_summary[0]['summary_text'])"
+      ],
+      "metadata": {
+        "id": "rD_mCIzc1d66",
+        "outputId": "dc25846b-40f8-4763-e11a-c13a57187fda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "rD_mCIzc1d66",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A forgotten melody drifts from an\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W11duvlj17Hu"
+      },
+      "id": "W11duvlj17Hu",
       "execution_count": null,
       "outputs": []
     }
