--- a/Beginner/Text_Summarization_App.ipynb
+++ b/Beginner/Text_Summarization_App.ipynb
@@ -361,11 +361,11 @@
         "print(custom_summary[0]['summary_text'])"
       ],
       "metadata": {
-        "id": "rD_mCIzc1d66",
-        "outputId": "dc25846b-40f8-4763-e11a-c13a57187fda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rD_mCIzc1d66",
+        "outputId": "dc25846b-40f8-4763-e11a-c13a57187fda"
       },
       "id": "rD_mCIzc1d66",
       "execution_count": 9,
@@ -381,11 +381,61 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Saving model for later use\n",
+        "\n",
+        "# Extract model\n",
+        "model = summarizer.model\n",
+        "# Extract tokenizer\n",
+        "tokenizer = summarizer.tokenizer\n",
+        "\n",
+        "# Save both to a directory\n",
+        "save_directory = \"saved_summarizer_model\"\n",
+        "model.save_pretrained(save_directory)\n",
+        "tokenizer.save_pretrained(save_directory)"
+      ],
       "metadata": {
-        "id": "W11duvlj17Hu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W11duvlj17Hu",
+        "outputId": "46c84663-03e4-4e37-f8ce-3510ed55b283"
       },
       "id": "W11duvlj17Hu",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/transformers/modeling_utils.py:3339: UserWarning: Moving the following attributes in the config to the generation config: {'max_length': 142, 'min_length': 56, 'early_stopping': True, 'num_beams': 4, 'length_penalty': 2.0, 'no_repeat_ngram_size': 3, 'forced_bos_token_id': 0}. You are seeing this warning because you've set generation parameters in the model config, as opposed to in the generation config.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('saved_summarizer_model/tokenizer_config.json',\n",
+              " 'saved_summarizer_model/special_tokens_map.json',\n",
+              " 'saved_summarizer_model/vocab.json',\n",
+              " 'saved_summarizer_model/merges.txt',\n",
+              " 'saved_summarizer_model/added_tokens.json',\n",
+              " 'saved_summarizer_model/tokenizer.json')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dsWveaVz256K"
+      },
+      "id": "dsWveaVz256K",
       "execution_count": null,
       "outputs": []
     }
