Tested pipeline with sample input. Created label map to understand model output.

--- a/Beginner/Sentiment Analysis App/Sentiment_Analysis_App.ipynb
+++ b/Beginner/Sentiment Analysis App/Sentiment_Analysis_App.ipynb
@@ -27,8 +27,6 @@
       "execution_count": 2,
       "id": "2e8dfb20",
       "metadata": {
-        "id": "2e8dfb20",
-        "outputId": "3bf37823-d5f6-4e27-8180-a34380564ead",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408,
@@ -100,7 +98,9 @@
             "fbd4dbc49bd148158dd7aa3ab07085b6",
             "424b841dfb48499c80de9fb50ce1bd9c"
           ]
-        }
+        },
+        "id": "2e8dfb20",
+        "outputId": "3bf37823-d5f6-4e27-8180-a34380564ead"
       },
       "outputs": [
         {
@@ -227,12 +227,12 @@
       "execution_count": 3,
       "id": "64132d30",
       "metadata": {
-        "id": "64132d30",
-        "outputId": "268a0cba-c7f3-4b6a-861f-7aef9a85688d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "64132d30",
+        "outputId": "268a0cba-c7f3-4b6a-861f-7aef9a85688d"
       },
       "outputs": [
         {
@@ -253,13 +253,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "8726603f",
       "metadata": {
-        "id": "8726603f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8726603f",
+        "outputId": "7aa15d82-2a34-40ce-f3db-76c07f8f24e0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'label': 'LABEL_2', 'score': 0.9879472851753235}]\n"
+          ]
+        }
+      ],
+      "source": [
+        "sample_input = \"I liked how the Lakers beat Clippers in the play-offs, I think they are the best!\"\n",
+        "output = classifier(sample_input)\n",
+        "print(output)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating a label map to understand the predicted label\n",
+        "label_map = {\n",
+        "    \"LABEL_0\": \"Negative\",\n",
+        "    \"LABEL_1\": \"Neutral\",\n",
+        "    \"LABEL_2\": \"Positive\"\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "61fiRgkVKBuy"
+      },
+      "id": "61fiRgkVKBuy",
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Map label\n",
+        "mapped_output = {\n",
+        "    \"label\": label_map[output[0][\"label\"]],\n",
+        "    \"score\": output[0][\"score\"]\n",
+        "}\n",
+        "\n",
+        "print(mapped_output)"
+      ],
+      "metadata": {
+        "id": "eNOLMhoNK_c1",
+        "outputId": "10532917-5004-4966-b1ee-0324332e51c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "eNOLMhoNK_c1",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'label': 'Positive', 'score': 0.9879472851753235}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VP-eM9L_LKSp"
+      },
+      "id": "VP-eM9L_LKSp",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
